crates/doodle-core/tests/snapshots/broken_syntax__36_stray_close_paren.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected a statement separator
  --> 36-stray-close-paren.doodle:1:8
1 | show(1))
  |        ^
